# personal-finance-tracker

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  run.py
backend/app/: database.py  date_parse.py  export.py  file_reader.py  harmonization.py  investment_cost_basis.py  investment_dashboard.py  main.py  models.py  preprocessing.py  preprocessing_example.py  raw_transactions.py  schemas.py  transaction_type_mappings.py  transactions_preprocessing.py  transactions_preprocessing_allianz.py  transactions_preprocessing_example.py  transactions_preprocessing_finecobank.py  transactions_preprocessing_intesa.py
backend/app/routers/: accounts.py  asset_types.py  assets_history.py  banks.py  investment_assets.py  investment_dashboard.py  investment_market_quotes.py  investment_transactions.py  raw_transactions.py  transactions.py  upload.py
backend/data/: .gitkeep
backend/examples/: .gitkeep  README.md  allianz_transactions_example.xls  intesa_transactions_example.xlsx
backend/scripts/: migrate_legacy.py  migrate_legacy_assets_history.py  migrate_legacy_transactions.py  test_harmonization.py
frontend/: edit.html  index.html  package-lock.json  package.json  tsconfig.json  upload.html  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/static/css/: style.css
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
frontend/src/views/: Dashboard.vue  DataManagement.vue  Edit.vue  Upload.vue
frontend/static/js/: dashboard.js  edit.js  upload.js
(+6 files in other folders)
